# similia

./: .arcconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKSPACE  caffe.BUILD  gtest.BUILD
scripts/: protoc.sh
similia/: CMakeLists.txt
similia/common/: CMakeLists.txt
similia/common/utils/: BUILD  base.h  file_utils.cpp  file_utils.h  metrics.cpp  metrics.h
similia/proto/: BUILD  CMakeLists.txt  compressed_elements.fbs  compressed_elements_generated.h  compressing_ids.fbs  compressing_ids_generated.h  similia.grpc.pb.cc  similia.grpc.pb.h  similia.pb.cc  similia.pb.h  similia.proto  similia_pb2.py
similia/servers/: BUILD  CMakeLists.txt  inverted_multi_index_server.cpp  inverted_multi_index_service.cpp  inverted_multi_index_service.h  similia_server.cpp  similia_service.cpp  similia_service.h
similia/tests/: BUILD  CMakeLists.txt  inverted_multi_index_test.cpp
similia/tools/: BUILD  CMakeLists.txt  extract_features.cpp  inverted_multi_index_test_client.cpp  similia_test_client.cpp
similia/utils/: BUILD  CMakeLists.txt  candidates_finder.cpp  candidates_finder.h  candidates_reranker.cpp  candidates_reranker.h  cropping_utils.cpp  cropping_utils.h  features_extractor.cpp  features_extractor.h  features_library.cpp  features_library.h  features_utils.cpp  features_utils.h  inverted_multi_index.cpp  inverted_multi_index.h  matrix_utils.h  multi_product_quantizer_service.cpp  multi_product_quantizer_service.h
tools/: bazel.rc
